--- a/.github/workflows/central.yml
+++ b/.github/workflows/central.yml
@@ -2,8 +2,6 @@ name: Publish package to the Maven Central Repository
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -22,7 +20,8 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Publish package
-        run: mvn -P central --batch-mode deploy -DskipTests
+        run: |
+          mvn -P central --batch-mode clean compile javadoc:jar deploy -DskipTests
         env:
           MAVEN_USERNAME: ${{ secrets.CENTRAL_SONATYPE_TOKEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.CENTRAL_SONATYPE_TOKEN_PASSWORD }}
