--- a/.github/workflows/deploy-to-download-server.yml
+++ b/.github/workflows/deploy-to-download-server.yml
@@ -30,7 +30,7 @@ jobs:
         passphrase: ${{ secrets.SCP_PASSPHRASE }}
         source: "org.eclipse.cbi.tycho.example.updatesite/target/org.eclipse.cbi.tycho.example.updatesite-*.zip"
         target: "/home/data/httpd/download.eclipse.org/cbi/github-upload-test/"
-        strip_components: true
+        strip_components: 2
       
 
  
