--- a/.github/workflows/deploy-to-download-server.yml
+++ b/.github/workflows/deploy-to-download-server.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean verify
 
-    - name: SCP artifact to download.eclipse.org
+    - name: SCP artifacts to download.eclipse.org
       uses: appleboy/scp-action@v1
       with:
         host: ${{ secrets.SCP_HOST }}
