--- a/.github/workflows/deploy-to-download-server.yml
+++ b/.github/workflows/deploy-to-download-server.yml
@@ -15,14 +15,14 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Setup Maven
-      uses: stCarolas/setup-maven@v5
+      uses: stCarolas/setup-maven@d6af6abeda15e98926a57b5aa970a96bb37f97d1 # v5
       with:
         maven-version: 3.9.11
     - name: Build with Maven
       run: mvn -B clean verify
 
     - name: SCP artifacts to download.eclipse.org
-      uses: appleboy/scp-action@v1
+      uses: appleboy/scp-action@ff85246acaad7bdce478db94a363cd2bf7c90345 # v1
       with:
         host: ${{ secrets.SCP_HOST }}
         username: ${{ secrets.SCP_USERNAME }}
