Set host in plaintext
Signed-off-by: Fred G <frederic.gurr@eclipse-foundation.org>

--- a/.github/workflows/deploy-to-download-server.yml
+++ b/.github/workflows/deploy-to-download-server.yml
@@ -24,7 +24,7 @@ jobs:
     - name: SCP artifacts to download.eclipse.org
       uses: appleboy/scp-action@ff85246acaad7bdce478db94a363cd2bf7c90345 # v1
       with:
-        host: ${{ secrets.SCP_HOST }}
+        host: projects-storage.eclipse.org
         username: ${{ secrets.SCP_USERNAME }}
         key: ${{ secrets.SCP_KEY }}
         passphrase: ${{ secrets.SCP_PASSPHRASE }}
