--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Configure Git user
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Eclipse CBI Bot"
+          git config --global user.email "cbi-bot@eclipse.org"
         shell: bash
 
       - name: Update file
