--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4.2.2
         with:
           repository: eclipse-cbi/eclipse-cbi-publish-test
+          token: ${{ secrets.HD6226_TOKEN }}
 
       - name: Configure Git user
         run: |
